实体类创建

--- a/finch-god-common-java/src/main/resources/generator/generator.properties
+++ b/finch-god-common-java/src/main/resources/generator/generator.properties
@@ -13,7 +13,7 @@ TargetProject = E:/project/finch_god/finch-god-common-java
 #TargetProject = E:/project/finch_god/finch-god-common-java
 
 host = 47.106.112.192:3306
-db = majiang
+db = finch_god
 userId = root
 password = alliance
 
