--- a/finch-god-web-java/src/main/resources/application-dev.yml
+++ b/finch-god-web-java/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@
 spring:
   datasource:
     name: mysql
-    url: jdbc:mysql://47.106.112.192:3306/majiang?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://47.106.112.192:3306/finch_god?characterEncoding=utf-8&useSSL=false
     username: root
     password: alliance
     driverClassName: com.mysql.jdbc.Driver
