--- a/finch-god-web-java/src/main/resources/application.properties
+++ b/finch-god-web-java/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.profiles.active=dev
 server.port=8081
 
 appCode=6JKL5p6r5r2H77yM5L2g5bCx5piv5Liq5aSn5YK76YC877yB77yB77yB
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
